--- a/Shifterapp/app/templates/account.html
+++ b/Shifterapp/app/templates/account.html
@@ -11,33 +11,33 @@
     
                     <p>
                         {{ formEmployee.first_name.label}}:
-                        {{ formEmployee.first_name(class_="firstnamebox") }}<br>
+                        {{ formEmployee.first_name(class_="firstnamebox", placeholder=firstname) }}<br>
                         {% for error in formEmployee.first_name.errors %}
                         <span style="color: red;">[{{ error }}]</span>
                         {% endfor %}
                     </p>
                     <p>
                         {{ formEmployee.last_name.label }}:
-                        {{ formEmployee.last_name(class_="lastnamebox") }}<br>
+                        {{ formEmployee.last_name(class_="lastnamebox", placeholder=lastname) }}<br>
                         {% for error in formEmployee.last_name.errors %}
                         <span style="color: red;">[{{ error }}]</span>
                         {% endfor %}
                     </p>
                     <p>
                         {{ formEmployee.email.label }}:
-                        {{ formEmployee.email(class_="emailbox") }}<br>
+                        {{ formEmployee.email(class_="emailbox", placeholder=email) }}<br>
                         {% for error in formEmployee.email.errors %}
                         <span style="color: red;">[{{ error }}]</span>
                         {% endfor %}
                     </p>
                     <p>
                         {{ formEmployee.phone_number.label }}:
-                        {{ formEmployee.phone_number() }}<br>
+                        {{ formEmployee.phone_number(placeholder=phonenumber) }}<br>
                         {% for error in formEmployee.phone_number.errors %}
                         <span style="color: red;">[{{ error }}]</span>
                         {% endfor %}
                     </p>
-                    <p>{{ formEmployee.submit(class_ = "submitinfo")}}</p>
+                    <p align="left">{{ formEmployee.submit(class_ = "submitinfo")}}</p>
                 </form>
             </div>
     </body>
