CSS changes. Shifter Logo now take you to homepage

--- a/Shifterapp/app/static/base.css
+++ b/Shifterapp/app/static/base.css
@@ -9,10 +9,22 @@ header{
     
 
 }
-nav h1{
+
+ul a{
+    color:gold;
+    font-size:18px;
+    text-decoration: none;
+    display:inline;
+}
+.ShifterHeader, nav h1{
+    text-decoration: none;
+    color:black;
     font-family:'Times New Roman', Times, serif;
     display:inline;
     font-size: 60px;
+}
+.ShifterHeader:hover{
+    cursor: pointer;
 }
 nav ul{
     display:inline;
@@ -30,7 +42,7 @@ nav ul li {
     font-style: normal;
 
 }
-a:hover{
+ul a:hover{
     text-decoration: underline;
     font-weight:800;
 }
@@ -56,11 +68,6 @@ a:hover{
     color:gold;
 
 
-}
-nav a{
-    color:gold;
-    font-size:18px;
-    text-decoration: none;
 }
 hr{
     border:none;
