--- a/Shifterapp/app/templates/base.html
+++ b/Shifterapp/app/templates/base.html
@@ -9,7 +9,7 @@
         {% endif %}
         
         <nav>
-            <h1>Shifter</h1>
+            <h1><a href = "{{url_for('login')}}" class = 'ShifterHeader'>Shifter</a></h1>
             <ul>
                 {% if title != "Shifter Scheduling Application" and title != "Register Organization" and title != "About Shifter" and title != "Contact Us" and title != 'Reset Your Password' %}
                 <li><a href="{{url_for('chooseToDo')}}">Home</a></li>
