Manager Scheduling works

--- a/Shifterapp/app/templates/choose.html
+++ b/Shifterapp/app/templates/choose.html
@@ -8,7 +8,7 @@
             <form action = '' method = 'POST'>
                 {{formEditView.View(class_="Buttons") }}<br>
                 {{formEditView.AddEmpl(class_ = "Buttons")}}<br>
-                {{formEditView.EditEmpl(class_="Buttons")}}
+                {{formEditView.ViewOwn(class_="Buttons")}}
             </form>
         </div>
     </body>
