--- a/Shifterapp/app/templates/managerviewsch.html
+++ b/Shifterapp/app/templates/managerviewsch.html
@@ -5,31 +5,43 @@
 <link href = "../static/managerviewsch.css" rel = "stylesheet" type = "text/css">
     <div id="grid-container">
         <div id="column-left">
-            Left column for add/remove shift buttons, page navigation, etc<br>
-            {{scheduleform.employees.label}}
-            {{scheduleform.employees}}<br>
-            {{scheduleform.startdate.label}}
-            {{scheduleform.startdate(value = todaysdate)}}
-            {{scheduleform.starttime.label}}
-            {{scheduleform.starttime}}<br>
-            {{scheduleform.enddate.label}}
-            {{scheduleform.enddate(value = todaysdate)}}
-            {{scheduleform.endtime.label}}
-            {{scheduleform.endtime}}
-            
+            <form method = 'POST' action = '' class = addform> 
+        <div class = 'employee'>    
+            <p>{{scheduleform.employees.label}}</p>
+            <p>{{scheduleform.employees}}</p>
+        </div>
+        <div class = 'dates'>
+            <p>{{scheduleform.startdate.label}}</p>
+            <p>{{scheduleform.startdate(value = datechosen)}}</p>
+        </div>
+            <p>{{scheduleform.starttime.label}}</p>
+            <p>{{scheduleform.starttime}}</p>
+            <p>{{scheduleform.endtime.label}}</p>
+            <p>{{scheduleform.endtime}}</p>
+            <p>{{scheduleform.Submit}}</p>
+        </form>
 
         </div>
             <div id="column-right">
-                <div id="schedule-graph" class="scroll-wrapper">
-                    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-                    <script type = "text/javascript" src="managerviewsch.js">
-                        var schedule_starts = {{schedule_starts|tojson}};
-                        var schedule_ends = {{schedule_ends|tojson}};
-                        var schedule_days = {{schedule_days|tojson}};
-                        var employee_names = {{employee_names|tojson}};
-                    </script>
+                <form method = 'POST' action = ''>
+                <div class = 'dates'>
+                <p>{{tableForm.datebox(value = datechosen)}}</p>
+                <p>{{tableForm.goTo}}</p>
+            </div>
+                <table>
+                    <th>Employee Name</th>
+                    <th>Start Time</th>
+                    <th>End Time</th>
+                {% for i in tabledict %}
+                <tr>
+                    <td>{{i}}</td>
+                    <td>{{tabledict[i][0]}}</td>
+                    <td>{{tabledict[i][1]}}</td>
+                </tr>
+                {% endfor %}
+                </table>
                 
-                </div>
+            </form>
             </div>
     </div>
 {% endblock %}
