--- a/Shifterapp/app/static/managerviewsch.css
+++ b/Shifterapp/app/static/managerviewsch.css
@@ -7,17 +7,17 @@ body{
 }
 #grid-container {
     display: grid;
-    grid-template-columns: 28% 70%;
+    grid-template-columns: 29.8% 70%;
     grid-template-rows: 100%;
-    grid-gap: 5px;
-    background-color: #2196F3;
-    padding: 10px;
+    grid-gap: 2px;
+    background-color: rgba(24, 24, 24, 0.226);
+    padding: 3px;
   }
   
 #grid-container > div {
   background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
-  background: green;
+  background: rgb(255, 255, 255);
   padding: 20px 20px;
   font-size: 14px;
 }
@@ -28,3 +28,36 @@ body{
   height: 400px;
   width: 400px;
 }
+.addform{
+  padding:5px;
+}
+.employee p , .dates p{
+  display:inline;
+}
+.employee{
+  margin-bottom: 10px;
+}
+p{
+  font-size: 20px;
+
+}
+p input[type=text]{
+  font-size: 15px;
+}
+table th, td , tr{
+  border: 2.5px solid rgba(0, 0, 0, 0.733);
+  width:300px;
+  height:70px;
+  background-color:rgba(211, 211, 211, 0.438);
+  font-size:25px;
+}
+table th{
+  background-color:rgb(61, 3, 3);
+  color:gold;
+}
+table{
+  margin-top:20px;
+  border-collapse: collapse;
+  margin-left:20%;
+  margin-bottom:25px;
+  margin-right:20%;
