--- a/Shifterapp/app/templates/base.html
+++ b/Shifterapp/app/templates/base.html
@@ -13,7 +13,7 @@
             <ul>
                 {% if title != "Shifter Scheduling Application" and title != "Register Organization" and title != "About Shifter" and title != "Contact Us" and title != 'Reset Your Password' %}
                 <li><a href="{{url_for('chooseToDo')}}">Home</a></li>
-                <li><a href="#">Edit Profile</a></li>
+                <li><a href="{{url_for('displayMyAccount')}}">Edit Profile</a></li>
                 {% endif %}
                 <li><a href="about">About</a></li>
                 <li><a href="{{url_for('contact')}}">Contact</a></li>
