Contact now fixed when logged in

--- a/Shifterapp/app/templates/Contact.html
+++ b/Shifterapp/app/templates/Contact.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-{% extends "base.html" %}
+    <link href = "../static/base.css?v1.4" rel = "stylesheet" type = "text/css">
+    <header>
+        {% if title %}
+        <title>{{title}}</title>
+        {% else %}
+        <title>Shifter</title>
+        {% endif %}
 
-{% block content %}
+        <nav>
+            <h1><a href = "{{url_for('login')}}" class = 'ShifterHeader'>Shifter</a></h1>
+            <ul>
+                {% if title != "Shifter Scheduling Application" and title != "Register Organization" and title != "About Shifter" and title != "Contact Us" and title != 'Reset Your Password' %}
+                <li><a href="{{url_for('chooseToDo')}}">Home</a></li>
+                <li><a href="{{url_for('displayMyAccount')}}">Edit Profile</a></li>
+                {% endif %}
+                <li><a href="about">About</a></li>
+                <li><a href="{{url_for('contact')}}">Contact</a></li>
 
     <link href = "../static/Contact.css?v=8.0" rel = "stylesheet" type = "text/css">
-
+    </header>
     <body>
         {% if success %}
             <p class = 'Thx'>Thank you for your message. We'll get back to you shortly.</p>
@@ -86,4 +100,17 @@
 
         </div>
     </body>
-{% endblock %}
+ </ul>
+        </nav>
+
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul class = flash>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+
+    {% endif %}
+    {% endwith %}
+   </html>
